It was not actually used, as tools have long been found in `DiagramDescription.getToolSections()` instead.

=== Dependency update

- https://github.com/eclipse-sirius/sirius-components/issues/1377[#1377] [core] Switch to Java 17
- [backend] Switch to EMFJson 2.3.4
- https://github.com/eclipse-sirius/sirius-components/issues/1496[#1496] [layout] Switch to ELK 0.8.1

=== Bug fixes

- https://github.com/eclipse-sirius/sirius-components/issues/1374[#1374] [layout] The border node position is now updated when its parents bounds has changed (e.g. when a node increases its size because of a child creation).
- https://github.com/eclipse-sirius/sirius-components/issues/1580[#1580] [diagram] Border nodes do not return to their previous position after they have been moved manually.
- https://github.com/eclipse-sirius/sirius-components/issues/1522[#1522] [diagram] Rectangle nodes with a header can now be resized.
- https://github.com/eclipse-sirius/sirius-components/issues/1529[#1529] [diagram] Improve the layout of newly created edges with a begin or end label
- https://github.com/eclipse-sirius/sirius-components/issues/1607[#1607] [tree] Make sure that a recently closed representation can be opened again

=== New Features

- https://github.com/eclipse-sirius/sirius-components/issues/1567[#1567] [project] Add support for project templates
- https://github.com/eclipse-sirius/sirius-components/issues/1456[#1456] [diagram] Add the ability to filter the edge created using some graphical variables
- https://github.com/eclipse-sirius/sirius-components/issues/1456[#1456] [view] Add a precondition expression to the edge description
- https://github.com/eclipse-sirius/sirius-components/issues/1463[#1463] [diagram] Add support for the direct edit of the start and end labels of an edge. Two new tools can be defined on an edge in order to specify how the begin and end labels can be edited.
+
image:doc/images/View_edit_begin_and_end_labels.png[width=491,height=285]
+